name:          sharedio
version:       0.1.0
license:       MIT
author:        Niklas Hambüchen (mail@nh2.me), John Lato
maintainer:    Niklas Hambüchen (mail@nh2.me)
category:      Concurrency
build-type:    Simple
license:       MIT
stability:     experimental
tested-with:   GHC==7.6.3
cabal-version: >= 1.10
homepage:      https://github.com/nh2/haskell-sharedio
bug-reports:   https://github.com/nh2/haskell-sharedio/issues
synopsis:      Bundles shared calls to IO functions to perform them only once
description:   Allows "bundling" or "throttling" of concurrent IO to perform computation only once.
               .
               Useful in situations where concurrency can be expensive, such as
               file system scans (where concurrent execution usually returns
               the same result but introduces much disk seeking overhead).


source-repository head
  type: git
  location: git://github.com/nh2/haskell-sharedio.git


library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Control.Concurrent.SharedIO
  build-depends:
      base >= 4 && < 5
  ghc-options: -Wall
